# c-3do

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  geometry.c  geometry.h  graphics_context.c  graphics_context.h  jobj.c  jobj.h  main.c  makefile  model.jobj  sob.c  sob.h
MSVC/: c-3do.sln  c-3do.vcxproj  c-3do.vcxproj.filters
MSVC/Nano-BMP/: Nano-BMP.vcxproj  Nano-BMP.vcxproj.filters
Nano-BMP/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Nano-BMP/include/: nano_bmp.h
Nano-BMP/src/: CMakeLists.txt  nano_bmp.c
Nano-BMP/test/: CMakeLists.txt  test.c
include/: color.h  geometry.h  graphics_context.h  obj.h
model/: cube.sob  fsharp.sob  line.sob  pyramid.sob
src/: CMakeLists.txt  color.c  color.h  geometry.c  geometry.h  graphics_context.c  graphics_context.h  main.c  obj.c  obj.h  scene.h  shaders.c  shaders.h  sob.c  textures.c  textures.h
